# karabus

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
app/: db.py  main.py  models.py  settings.py
app/apps/busses/: constants.py  enums.py  models.py  repositories.py  routers.py  schemas.py  use_cases.py  validators.py  views.py
app/apps/busses/exceptions/: already_exists.py  not_found.py
app/apps/busses/schemas/: bus.py  create_bus_request.py  create_bus_response.py  read_bus_response.py  read_busses_request.py  read_busses_response.py  (+2 more)
app/apps/cities/: models.py  repositories.py  routers.py  schemas.py  use_cases.py  views.py
app/apps/orders/: enums.py  exceptions.py  schemas.py  use_cases.py  views.py
app/apps/trips/: exceptions.py  schemas.py  use_cases.py  views.py
app/apps/users/: exceptions.py  jwt.py  schemas.py  views.py
app/base/: exceptions.py  models.py  services.py
app/exceptions/: already_exists.py  base.py  not_found.py
app/models/: __init__.py  base.py  busses.py  cities.py  orders.py  passengers.py  trip_stop.py  trips.py  users.py
app/schemas/: pagination.py
migrations/: env.py
migrations/versions/: 014da2ba4ce5_add_buss_photo_filename.py  20c01e7aeec8_add_bus_model.py  3640613f55ec_init.py  3687c8693f05_add_trips.py  5b28af7fa5f4_add_users.py  6dbf42a4309f_add_orders.py  b685dacd8d84_add_city_model.py  beee1e081328_add_busses.py
tests/: conftest.py  test_busses.py  test_cities.py  test_main.py  test_orders.py  test_trips.py  test_users.py  utils.py
(+37 files in other folders)
