[tool.poetry]
name = "karabus"
version = "0.1.0"
description = ""
authors = ["Yevhen Dudka <yevhen.dudka@nixs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.17"
psycopg = { extras = ["binary"], version = "^3.1.9" }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
